--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Decode SSH private key
+      run: |
+        echo "${{ secrets.SERVER_SSH_KEY_B64 }}" | base64 -d > id_rsa
+        chmod 600 id_rsa
+
     - name: Copy files to server using SCP
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
+        key_path: ./id_rsa
         port: 55000
         source: "."
         target: "/home/${{ secrets.SERVER_USER }}/interceptionInjection"
