prevent from copying rsa private to the server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,7 @@ jobs:
         port: 55000
         source: "."
         target: "/home/${{ secrets.SERVER_USER }}/interceptionInjection"
+        rm: true
+        strip_components: 0
+        tar_tmp_path: /tmp
+        exclude: "id_rsa"
