--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Decode SSH private key
+    - name: Write SSH private key to file
       run: |
-        echo "${{ secrets.SERVER_SSH_KEY_B64 }}" | base64 -d > id_rsa
+        echo "${{ secrets.SERVER_SSH_KEY }}" > id_rsa
         chmod 600 id_rsa
 
     - name: Copy files to server using SCP
@@ -28,7 +28,7 @@ jobs:
         port: 55000
         source: "."
         target: "/home/${{ secrets.SERVER_USER }}/interceptionInjection"
-        rm: true
-        strip_components: 0
-        tar_tmp_path: /tmp
         exclude: "id_rsa"
+
+    - name: Delete SSH private key
+      run: rm -f id_rsa
